Fix icon alignment

--- a/src/components/chart/tooltip/tooltip.module.css
+++ b/src/components/chart/tooltip/tooltip.module.css
@@ -10,6 +10,7 @@
 
 .Title {
   display: flex;
+  align-items: center;
   padding-left: 32px;
 }
 
